# vector-store-text

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: rust.yml  update_jira_status_in_review.yml  update_jira_status_ready_for_merge.yml
src/: actor.rs  db.rs  db_index.rs  engine.rs  httproutes.rs  httpserver.rs  index.rs  lib.rs  main.rs  modify_indexes.rs  monitor.rs  monitor_indexes.rs  monitor_items.rs  monitor_queries.rs  supervisor.rs
src/index/: actor.rs  factory.rs  mod.rs  opensearch.rs  usearch.rs
tests/integration/: db_basic.rs  httpclient.rs  main.rs  usearch.rs
