# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

# TODO: review and limit dependencies and features

[package]
name = "vector-store"
version = "0.1.0"
edition = "2024"

[features]
default = ["dep:usearch"]
opensearch = ["dep:opensearch"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
bimap = "0.6.3"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.14.0"
opensearch = { version = "2.3.0", optional = true }
rayon = "1.10.0"
regex = "1.11.1"
scylla = { version = "1.1.0", features = ["time-03"] }
scylla-cdc = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
usearch = { git = "https://github.com/unum-cloud/usearch.git", rev = "306d6646", optional = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = "1.16.0"

[patch.crates-io]
scylla = { git = "https://github.com/ewienik/scylla-rust-driver.git", rev = "5fef6ae" }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
