# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

# TODO: review and limit dependencies and features

[package]
name = "vector-store-text"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
bimap = "0.6.3"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.14.0"
opensearch = { version = "2.3.0" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = "1.16.0"

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
